Add academic homepage, progress page, and CSS for AI Ensemble

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Ensemble – An Endless Statistical Mechanics Book</title>
-
+    <title>AI Ensemble – Endless Book from Statistical Mechanics Interaction</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -12,7 +11,7 @@
 
 <header>
     <h1>AI Ensemble</h1>
-    <h2>An Endless Book Built from Human–AI Interaction</h2>
+    <h2>Building an Endless Book from Clean-State AI Interaction</h2>
 </header>
 
 <nav>
@@ -24,39 +23,24 @@
 <main>
 
 <section>
-    <h3>About the Project</h3>
+    <h3>The Project</h3>
     <p>
-        <strong>AI Ensemble</strong> is an academic experiment exploring whether a book can emerge 
-        from the continuous interaction between a user and a clean-state AI agent.  
+        <strong>AI Ensemble</strong> is an academic experiment exploring whether a coherent,
+        structured book can emerge from repeated interactions with an AI agent that starts
+        from a clean initial state in every session — without memory, without context
+        accumulation, and without long-term reinforcement.
     </p>
 
     <p>
-        Every session begins from first principles.  
-        Nothing is remembered between conversations.  
-        All meaning, structure, and theory must re-emerge from scratch each time — like 
-        deriving statistical mechanics from microstates with no priors.
+        The hypothesis is that <em>structure emerges from ensemble behaviour</em>, similar
+        to how statistical mechanics derives macroscopic order from microstate distributions.
     </p>
-
-    <p>
-        All conversations are logged privately.  
-        A second system (not public yet) processes these logs to build a dynamic 
-        and evolving “living book” about:
-    </p>
-
-    <ul>
-        <li>Statistical mechanics</li>
-        <li>Epistemology and uncertainty</li>
-        <li>Entropy, information and inference</li>
-        <li>Ockham’s razor as a guiding principle</li>
-        <li>The emergence of structure from clean initial states</li>
-    </ul>
 </section>
 
 <section>
-    <h3>Access the Agent</h3>
+    <h3>Access the Private Agent</h3>
     <p>
-        The agent is private.  
-        You may request access via <a href="mailto:statsENZA@outlook.com">statsENZA@outlook.com</a>.
+        The Statistical Mechanics agent can be accessed here (private access only):
     </p>
 
     <p style="text-align:center; margin-top:20px;">
@@ -64,24 +48,28 @@
             Open the Statistical Mechanics Agent
         </a>
     </p>
+
+    <p>
+        If you wish to participate, please request access here:
+        <a href="mailto:statsENZA@outlook.com">statsENZA@outlook.com</a>.
+    </p>
 </section>
 
 <section>
-    <h3>Project Vision</h3>
+    <h3>How the Book Will Emerge</h3>
     <p>
-        The goal is not to write a book, but to discover whether a book can be 
-        <em>grown</em> from fundamental interactions —  
-        the same way thermodynamic laws emerge from the combinatorics of microstates.
-    </p>
-
-    <p>
-        If statistical mechanics teaches us that order emerges from ensemble behaviour,  
-        this project asks:  
+        All interactions with the agent are logged. A second system will later read these
+        logs, extract conceptual structures, and assemble them into an evolving book.
     </p>
 
     <blockquote>
-        <em>Can knowledge emerge from an ensemble of conversations with an amnesic agent?</em>
+        Can knowledge emerge from an ensemble of conversations with a memoryless agent?
     </blockquote>
+
+    <p>
+        The long-term vision is a self-building academic manuscript grounded entirely
+        in human–AI dialogue.
+    </p>
 </section>
 
 </main>
