--- a/progress.html
+++ b/progress.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Ensemble – Project Progress</title>
+    <title>AI Ensemble – Current Progress</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -11,7 +11,7 @@
 
 <header>
     <h1>Project Progress</h1>
-    <h2>Tracking the Emergence of the Endless Book</h2>
+    <h2>Where We Are in the Endless Book Experiment</h2>
 </header>
 
 <nav>
@@ -23,40 +23,32 @@
 <main>
 
 <section>
-    <h3>Current Phase: Controlled Interaction & Logging</h3>
-
+    <h3>Phase 1 — Controlled Interaction & Logging</h3>
     <p>
-        The system is currently in <strong>Phase 1</strong>:
+        The private Statistical Mechanics agent is operational. Each interaction begins 
+        from a clean initial state. Conversations are logged securely in DigitalOcean.
     </p>
+    <p>
+        The goal in this phase is to generate high-quality conceptual dialogues 
+        that reveal how structure re-emerges in each session.
+    </p>
+</section>
 
+<section>
+    <h3>Next Steps — Structure Extraction</h3>
     <ul>
-        <li>A private agent interacts with a single user.</li>
-        <li>Each conversation begins from a clean start (no memory, no context drift).</li>
-        <li>All interactions are logged privately on the DigitalOcean backend.</li>
-        <li>These logs will form the basis of the future book.</li>
+        <li>Analyze the logs using a second AI system</li>
+        <li>Extract conceptual structures and recurring themes</li>
+        <li>Generate chapter outlines for the emerging book</li>
+        <li>Visualize the progress on this site</li>
     </ul>
 </section>
 
 <section>
-    <h3>Next Phase: Structural Extraction</h3>
+    <h3>Long-Term Vision</h3>
     <p>
-        A second agent will read the logs and:
-    </p>
-
-    <ul>
-        <li>Extract conceptual structures</li>
-        <li>Detect themes and recurring ideas</li>
-        <li>Build chapter scaffolds</li>
-        <li>Generate text fragments grounded in real conversations</li>
-    </ul>
-</section>
-
-<section>
-    <h3>Long-Term Goal</h3>
-    <p>
-        To create a <strong>self-growing, self-organizing book</strong> that behaves like
-        an “intellectual thermodynamic system” — where meaning emerges from the ensemble
-        of interactions between a human and a clean-state statistical mechanics agent.
+        To grow a self-organizing, self-expanding book grounded entirely in human–AI 
+        interaction, inspired by statistical mechanics and epistemic minimalism.
     </p>
 </section>
 
