Add About the Author page and navigation updates

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="progress.html">Where We Are</a>
-    <a href="mailto:statsENZA@outlook.com">Request Access</a>
+    <a href="where-we-are.html">Where We Are</a>
+    <a href="about.html">About the Author</a>
 </nav>
+
 
 <main>
 
