Replace mailto link with plain text email

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     </p>
 
     <p>
-        If you wish to participate, please request access here:
-        <a href="mailto:statsENZA@outlook.com">statsENZA@outlook.com</a>.
+      If you wish to participate, please request access here: <strong>statsENZA@outlook.com</strong> (copy & paste).
     </p>
 </section>
 
