Restore link to updated Where We Are page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <nav>
     <a href="index.html">Home</a>
     <a href="where-we-are.html">Where We Are</a>
-    <a href="about.html">About the Author</a>
+    <a href="#author">About the Author</a>
 </nav>
+
 
 
 <main>
