Updated site content for AI Experiment Designer

--- a/index.html
+++ b/index.html
@@ -3,73 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Ensemble – Endless Book from Statistical Mechanics Interaction</title>
+    <title>AI Ensemble — Experiment Design Intelligence</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
 <header>
     <h1>AI Ensemble</h1>
-    <h2>Building an Endless Book from Clean-State AI Interaction</h2>
+    <h2>AI-Driven Experiment Design From Clean-State Interaction</h2>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="where-we-are.html">Where We Are</a>
+        <a href="about.html">About the Author</a>
+    </nav>
 </header>
-
-<nav>
-    <a href="index.html">Home</a>
-    <a href="where-we-are.html">Where We Are</a>
-</nav>
-
-
 
 <main>
 
 <section>
     <h3>The Project</h3>
+
     <p>
-        <strong>AI Ensemble</strong> is an academic experiment exploring whether a coherent,
-        structured book can emerge from repeated interactions with an AI agent that starts
-        from a clean initial state in every session — without memory, without context
-        accumulation, and without long-term reinforcement.
+        <strong>AI Ensemble</strong> explores whether artificial intelligence can design credible,
+        statistically defensible experiments directly from user interaction. Each session starts
+        from a clean state — no memory, no customization, no long-term reinforcement — ensuring
+        neutrality and scientific objectivity.
     </p>
 
     <p>
-        The hypothesis is that <em>structure emerges from ensemble behaviour</em>, similar
-        to how statistical mechanics derives macroscopic order from microstate distributions.
+        The agent assists researchers in designing experiments across plant breeding, agronomy,
+        biology, clinical trials, industrial optimization, and social sciences. It helps generate
+        hypotheses, select factors, outline statistical structures, detect confounders, and produce
+        reproducible designs.
+    </p>
+
+    <p>
+        A second agent processes anonymous logs using ensemble statistics and Gibbs sampling to
+        understand which experiment patterns consistently emerge as credible solutions.
     </p>
 </section>
 
 <section>
     <h3>Access the Private Agent</h3>
-    <p>
-        The Statistical Mechanics agent can be accessed here (private access only):
-    </p>
 
-    <p style="text-align:center; margin-top:20px;">
-        <a class="button" href="https://stingray-app-p3k8e.ondigitalocean.app/" target="_blank">
-            Open the Statistical Mechanics Agent
-        </a>
-    </p>
+    <p>The experimental-design agent can be accessed here (private access only):</p>
+
+    <a class="button" href="https://stingray-app-p3k8e.ondigitalocean.app/" target="_blank">
+        Open the Experiment-Design Agent
+    </a>
 
     <p>
-      If you wish to participate, please request access here: <strong>statsENZA@outlook.com</strong> (copy & paste).
+        To request access, copy & paste this email:<br>
+        <strong>statsENZA@outlook.com</strong>
     </p>
 </section>
 
 <section>
-    <h3>How the Book Will Emerge</h3>
+    <h3>How the System Learns</h3>
+
     <p>
-        All interactions with the agent are logged. A second system will later read these
-        logs, extract conceptual structures, and assemble them into an evolving book.
+        All interactions with the agent are logged anonymously. A second agent evaluates recurring
+        structures, tests credibility of proposed designs, and synthesizes ensemble knowledge about
+        what constitutes a strong experimental plan.
     </p>
 
     <blockquote>
-        Can knowledge emerge from an ensemble of conversations with a memoryless agent?
+        Can an AI discover stable principles of experiment design by studying clean-state conversations?
     </blockquote>
-
-    <p>
-        The long-term vision is a self-building academic manuscript grounded entirely
-        in human–AI dialogue.
-    </p>
 </section>
 
 </main>
