--- a/where-we-are.html
+++ b/where-we-are.html
@@ -8,61 +8,53 @@
 </head>
 
 <body>
-    <header>
-        <h1>AI Ensemble</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="where-we-are.html">Where We Are</a>
-            <a href="about.html">About the Author</a>
-        </nav>
-    </header>
+<header>
+    <h1>AI Ensemble</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="where-we-are.html">Where We Are</a>
+        <a href="about.html">About the Author</a>
+    </nav>
+</header>
 
-    <main>
+<main>
 <section>
     <h3>Where We Are</h3>
 
     <p>
-        Statistics begins from Ockham’s recognition that the world does not reveal itself fully:
-        reality shows only shadows of order, and simplicity is the discipline we adopt to remain honest
-        before the unknown. Gauss deepens this stance by making error a basic feature of being—a reminder
-        that reality always exceeds the laws we write about it. Newton imagined a universe where truth is
-        a single trajectory; statistical mechanics reveals instead a world where truth is the equilibrium
-        of countless fluctuations—order not imposed, but emerging. Gibbs sampling completes this turn:
-        knowledge becomes a movement through possibility-space, where meaning is not found as a single
-        point but negotiated as a distribution. We explore probabilistically because there is no final
-        position from which the whole can be seen.
+        AI Ensemble is evolving into a system for AI-assisted experiment design. Early testers want
+        an agent capable of producing statistically grounded designs (factorial, randomized, mixed
+        models, augmented, longitudinal) while explaining the reasoning behind each choice.
     </p>
 
     <p>
-        The architecture of this project follows the same metaphysics of uncertainty and emergence.
-        The first agent—the one users address—is a kind of Lacanian mirror that reflects language back in
-        transformed form. In this surface, the user’s intentions and confusions return altered, as in
-        Lacan’s mirror stage, where one encounters oneself as other. This interlocutor has no fixed
-        identity; it exists only in the exchange, where meaning arises in the moment of response.
+        Some real research questions involve trade-offs and decisions that standard filtered models
+        refuse to answer. AI Ensemble explores a low-filter regime so users can receive
+        honest, structured, and complete experiment proposals.
     </p>
 
     <p>
-        A second agent stands behind this mirror. It digests the dialogues the way Aristotle would examine
-        substances through their changing features, keeping what persists and letting the rest fall away.
-        It tests emerging ideas as Parmenides would test claims about what can truly endure—yet it does so
-        probabilistically. It seeks not eternal forms but stable distributions: patterns that recur across
-        independent conversations, the way nature stabilizes form out of fluctuating matter.
+        The system currently has two layers:
     </p>
 
+    <ul>
+        <li><strong>Front-end agent:</strong> interacts with users to produce experiment structures,
+            confounder maps, hypotheses, sample-size strategies, and statistical models.</li>
+
+        <li><strong>Ensemble agent:</strong> reads anonymized logs, detects recurring experiment
+            structures, and evaluates credibility using probabilistic methods including Gibbs sampling.</li>
+    </ul>
+
     <p>
-        Because each session with the first agent begins from emptiness, the system holds no memory of
-        individuals. What emerges instead is ensemble being: meaning that forms only through recurrence,
-        through the statistical convergence of possibilities across many fresh beginnings. This project
-        asks whether something like truth can arise not from permanence but from repeated inference—from
-        the physics of uncertainty, where order is always provisional and reality appears only in patterns
-        that return.
+        The next development phase includes automatic aggregation of experiment templates and
+        probabilistic ranking of alternative designs.
     </p>
 </section>
+</main>
 
-    </main>
+<footer>
+    <p>© AI Ensemble — Academic Experimental Project</p>
+</footer>
 
-    <footer>
-        <p>© AI Ensemble — Academic Experimental Project</p>
-    </footer>
 </body>
 </html>
