--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1>AI Ensemble</h1>
     <h2>AI-Driven Experiment Design From Clean-State Interaction</h2>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="where-we-are.html">Where We Are</a>
-        <a href="about.html">About the Author</a>
-    </nav>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="certified-prompts.html">Certified Prompts</a>
+    <a href="about.html">About the Author</a>
+</nav>
 </header>
 
 <main>
