Updated Certified Prompts page with first certified prompt and submission instructions

--- a/certified-prompts.html
+++ b/certified-prompts.html
@@ -24,76 +24,83 @@
     <h3>Certified Prompts</h3>
 
     <p>
-        Certified Prompts are prompts that the AI Ensemble system has evaluated for:
+        <strong>Certified Prompts</strong> are prompts that the AI Ensemble system has evaluated for:
     </p>
 
     <ul>
-        <li>clarity of experimental intent</li>
+        <li>clarity of scientific intent</li>
         <li>statistical credibility</li>
         <li>absence of hidden confounders</li>
         <li>alignment with reproducible study design principles</li>
-        <li>compatibility with proper model fitting and inference</li>
+        <li>stability under probabilistic evaluation (e.g., Gibbs sampling)</li>
     </ul>
 
     <p>
-        These prompts have been tested using probabilistic scoring, including 
-        <strong>Gibbs sampling credibility checks</strong>, ensuring that the experimental plan generated
-        from each prompt remains stable under repeated clean-state reasoning.
+        Only prompts that consistently lead to stable and interpretable experimental designs are certified.
+        As the project grows, more prompts will be added to this list.
     </p>
+</section>
 
-    <h4>Why Certification?</h4>
 
-    <p>
-        In real scientific work, small changes in phrasing can produce extremely different study
-        designs. Certified Prompts help users ask questions in a way that leads the AI to produce
-        robust, interpretable, and statistically consistent outputs.
-    </p>
+<section>
+    <h3>Currently Certified Prompt</h3>
 
-    <h4>Examples of Certified Prompts</h4>
-
-    <p>These can be expanded as the system grows:</p>
+    <p>The following prompt has been fully certified:</p>
 
     <ul>
-
         <li>
-            <strong>Factorial Trials:</strong><br>
-            “Design a 3×3 factorial experiment to test genotype × environment interaction,
-            including randomization, replication strategy, and appropriate ANOVA model.”
+            <strong>“What is an augmented design in plant breeding?”</strong><br>
+            This prompt has passed checks for clarity, scientific relevance, and reproducibility.
+            It consistently yields a stable and statistically correct description of the augmented design
+            framework used in plant breeding trials.
         </li>
-
-        <li>
-            <strong>Genomic Prediction:</strong><br>
-            “Propose a cross-validation scheme for genomic prediction with unbalanced trials,
-            ensuring non-leakage between training and validation folds.”
-        </li>
-
-        <li>
-            <strong>Agricultural Field Design:</strong><br>
-            “Generate an augmented design with two checks repeated across blocks,
-            including mixed model specification and expected precision.”
-        </li>
-
-        <li>
-            <strong>Clinical Studies:</strong><br>
-            “Construct a randomized controlled trial for comparing two interventions,
-            including power analysis and identification of confounders.”
-        </li>
-
-        <li>
-            <strong>Industrial Optimization:</strong><br>
-            “Design a response-surface experiment to estimate quadratic effects
-            with proper rotatability and minimal aliasing.”
-        </li>
-
     </ul>
+</section>
 
-    <h4>Submit Your Prompt for Certification</h4>
+
+<section>
+    <h3>Submit Your Prompt for Certification</h3>
 
     <p>
-        You may request certification of your own prompts by emailing:<br>
-        <strong>statsENZA@outlook.com</strong>
+        You may submit your own prompt for certification.  
+        The evaluation process examines whether your question:
     </p>
 
+    <ul>
+        <li>produces statistically sound designs when interpreted by the agent</li>
+        <li>avoids ambiguity or hidden assumptions</li>
+        <li>remains stable across multiple clean-state reasoning cycles</li>
+        <li>matches recognized scientific frameworks (e.g., ANOVA, GLM, REML, experimental design theory)</li>
+    </ul>
+
+    <p>
+        To submit a prompt for certification, simply send it by email:
+    </p>
+
+    <p>
+        <strong>statsENZA@outlook.com</strong>  
+        <em>(copy & paste the address manually)</em>
+    </p>
+</section>
+
+
+<section>
+    <h3>Request Access to the Private Agent</h3>
+
+    <p>
+        Access to the AI experimental-design agent is private.  
+        Researchers, academics, and collaborators can request access via the same email:
+    </p>
+
+    <p>
+        <strong>statsENZA@outlook.com</strong>  
+        <em>(copy & paste)</em>
+    </p>
+
+    <p>
+        You will receive instructions and a temporary password.  
+        Access is granted based on alignment with the scientific mission of the project.
+    </p>
 </section>
 
 </main>
