Full update to Certified Prompts page with protected access system

--- a/certified-prompts.html
+++ b/certified-prompts.html
@@ -24,37 +24,59 @@
     <h3>Certified Prompts</h3>
 
     <p>
-        <strong>Certified Prompts</strong> are prompts that the AI Ensemble system has evaluated for:
+        <strong>Certified Prompts</strong> are prompts that AI Ensemble has evaluated and confirmed to produce
+        stable, scientifically credible, and reproducible experimental designs. They pass tests for:
     </p>
 
     <ul>
         <li>clarity of scientific intent</li>
-        <li>statistical credibility</li>
         <li>absence of hidden confounders</li>
-        <li>alignment with reproducible study design principles</li>
+        <li>statistical and experimental design correctness</li>
         <li>stability under probabilistic evaluation (e.g., Gibbs sampling)</li>
+        <li>alignment with accepted statistical models (mixed models, ANOVA, GLM, etc.)</li>
     </ul>
 
     <p>
-        Only prompts that consistently lead to stable and interpretable experimental designs are certified.
-        As the project grows, more prompts will be added to this list.
+        Only prompts that consistently produce valid designs across many clean-state runs are certified.
     </p>
 </section>
 
 
 <section>
-    <h3>Currently Certified Prompt</h3>
+    <h3>Current Certified Prompt (Example)</h3>
 
-    <p>The following prompt has been fully certified:</p>
+    <p>
+        This certified prompt is provided as an example of the type of scientific prompt that meets 
+        the certification criteria.
+    </p>
+
+    <p>
+        <strong>Topic (Example):</strong> Augmented Design in Plant Breeding
+    </p>
+
+    <p>
+        The exact wording of the certified prompt is <strong>not publicly displayed</strong> to protect its 
+        intellectual and scientific value. The certified version reliably produces:
+    </p>
 
     <ul>
-        <li>
-            <strong>“What is an augmented design in plant breeding?”</strong><br>
-            This prompt has passed checks for clarity, scientific relevance, and reproducibility.
-            It consistently yields a stable and statistically correct description of the augmented design
-            framework used in plant breeding trials.
-        </li>
+        <li>a correct description of augmented block designs</li>
+        <li>proper check and treatment structure</li>
+        <li>valid mixed-model variance components</li>
+        <li>expected precision and variance interpretation</li>
+        <li>a layout consistent with real breeding practice</li>
     </ul>
+
+    <p>
+        Additional certified prompts exist and are accessible through a 
+        <strong>password-protected Certified Prompt Page</strong>.
+    </p>
+
+    <p>
+        Users may request the password by emailing:  
+        <strong>statsENZA@outlook.com</strong><br>
+        <em>(copy & paste manually)</em>
+    </p>
 </section>
 
 
@@ -62,44 +84,24 @@
     <h3>Submit Your Prompt for Certification</h3>
 
     <p>
-        You may submit your own prompt for certification.  
-        The evaluation process examines whether your question:
+        You may submit your own experimental-design prompt for certification. Submitted prompts are evaluated
+        to determine whether they produce:
     </p>
 
     <ul>
-        <li>produces statistically sound designs when interpreted by the agent</li>
-        <li>avoids ambiguity or hidden assumptions</li>
-        <li>remains stable across multiple clean-state reasoning cycles</li>
-        <li>matches recognized scientific frameworks (e.g., ANOVA, GLM, REML, experimental design theory)</li>
+        <li>stable and credible designs under fresh-state reasoning</li>
+        <li>proper model structure and statistical interpretation</li>
+        <li>clear identification of confounders and factor structure</li>
+        <li>consistent output under Gibbs-sampling stress testing</li>
     </ul>
 
     <p>
-        To submit a prompt for certification, simply send it by email:
+        To submit a prompt, or to request access to the password-protected Certified Prompt Page, contact:
     </p>
 
     <p>
-        <strong>statsENZA@outlook.com</strong>  
-        <em>(copy & paste the address manually)</em>
-    </p>
-</section>
-
-
-<section>
-    <h3>Request Access to the Private Agent</h3>
-
-    <p>
-        Access to the AI experimental-design agent is private.  
-        Researchers, academics, and collaborators can request access via the same email:
-    </p>
-
-    <p>
-        <strong>statsENZA@outlook.com</strong>  
-        <em>(copy & paste)</em>
-    </p>
-
-    <p>
-        You will receive instructions and a temporary password.  
-        Access is granted based on alignment with the scientific mission of the project.
+        <strong>statsENZA@outlook.com</strong><br>
+        <em>(copy & paste manually)</em>
     </p>
 </section>
 
