Update link to DigitalOcean agent

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <p>The experimental-design agent can be accessed here (private access only):</p>
 
-    <a class="button" href="https://stingray-app-p3k8e.ondigitalocean.app/" target="_blank">
+    <a class="button" href="https://statsapp-47vj4.ondigitalocean.app/" target="_blank">
         Open the Experiment-Design Agent
     </a>
 
