Update button link to new DigitalOcean app

--- a/index.html
+++ b/index.html
@@ -25,29 +25,26 @@
     <h3>The Project</h3>
 
     <p>
-        <strong>AI Ensemble</strong> explores whether artificial intelligence can design credible,
-        statistically defensible experiments directly from user interaction. Each session starts
-        from a clean state — no memory, no customization, no long-term reinforcement — ensuring
-        neutrality and scientific objectivity.
+        <strong>AI Ensemble</strong> explores whether Retrieval-Augmented Generation (RAG) with the AI framework
+        and statistics strategic statistical programming.
     </p>
 
     <p>
-        The agent assists researchers in designing experiments across plant breeding, agronomy,
-        biology, clinical trials, industrial optimization, and social sciences. It helps generate
-        hypotheses, select factors, outline statistical structures, detect confounders, and produce
-        reproducible designs.
+        The agent assists free thinkers in designing experiments and generate
+        hypotheses and enable probability thinking using cureted code.
     </p>
 
     <p>
-        A second agent processes anonymous logs using ensemble statistics and Gibbs sampling to
-        understand which experiment patterns consistently emerge as credible solutions.
+        Code gahter from experts that have been used to to replicate scientifi articles are
+        registerd in our RAG databe, this code together with opinions from subject matter experts 
+        are blented with AI to deliver specif advise for coding and genetical strategy.
     </p>
 </section>
 
 <section>
     <h3>Access the Private Agent</h3>
 
-    <p>The experimental-design agent can be accessed here (private access only):</p>
+    <p>The AI Ensemble Ensamble agent can be accessed here  (private access only):</p>
 
     <a class="button" href="https://statsapp-47vj4.ondigitalocean.app/" target="_blank">
         Open the Experiment-Design Agent
@@ -55,7 +52,7 @@
 
     <p>
         To request access, copy & paste this email:<br>
-        <strong>statsENZA@outlook.com</strong>
+        <strong>joseguerraenza@gmail.com</strong>
     </p>
 </section>
 
@@ -63,20 +60,18 @@
     <h3>How the System Learns</h3>
 
     <p>
-        All interactions with the agent are logged anonymously. A second agent evaluates recurring
-        structures, tests credibility of proposed designs, and synthesizes ensemble knowledge about
-        what constitutes a strong experimental plan.
+        spcific prompts can be used to trigger the knowledge base of the agent for optimal feedback
     </p>
 
     <blockquote>
-        Can an AI discover stable principles of experiment design by studying clean-state conversations?
+        Can an AI deliver time saving reliable advise for scientists, programmers, and students?
     </blockquote>
 </section>
 
 </main>
 
 <footer>
-    <p>© AI Ensemble — Academic Experimental Project</p>
+    <p>© AI Ensemble — An statistical start up</p>
 </footer>
 
 </body>
