Update button link to new DigitalOcean app

--- a/index.html
+++ b/index.html
@@ -25,19 +25,26 @@
     <h3>The Project</h3>
 
     <p>
-        <strong>AI Ensemble</strong> explores whether Retrieval-Augmented Generation (RAG) with the AI framework
-        and statistics strategic statistical programming.
+        <strong>AI Ensemble</strong> Our approach focuses on validating classical scientific research through reproducible code and making that validated code accessible via                           Generative AI and Retrieval-Augmented Generation (RAG).
+The process involves:
+
+Reviewing and verifying scientific articles by reproducing their results through rigorous statistical programming.
+Registering validated code in a curated RAG knowledge base, ensuring transparency and reproducibility.
+Blending expert-reviewed code with domain insights and AI capabilities to deliver precise guidance for coding strategies and genetic analysis.
+
+This enables researchers and data scientists to design experiments, generate hypotheses, and apply probability-driven thinking using trusted, validated resources—augmen
     </p>
 
     <p>
-        The agent assists free thinkers in designing experiments and generate
-        hypotheses and enable probability thinking using cureted code.
+        The agent assists user to generate hypotheses 
+        and enable probability thinking using cureted code.
     </p>
 
     <p>
-        Code gahter from experts that have been used to to replicate scientifi articles are
-        registerd in our RAG databe, this code together with opinions from subject matter experts 
-        are blented with AI to deliver specif advise for coding and genetical strategy.
+        Validated code, gathered from experts and used to replicate scientific articles, is registered in our RAG database.
+       This code, combined with insights from subject matter experts, 
+       is integrated with AI to deliver precise guidance for coding practices and genetic strategy.
+
     </p>
 </section>
 
@@ -60,11 +67,11 @@
     <h3>How the System Learns</h3>
 
     <p>
-        spcific prompts can be used to trigger the knowledge base of the agent for optimal feedback
+        spcific prompts can be used to trigger the knowledge base for optimal feedback
     </p>
 
     <blockquote>
-        Can an AI deliver time saving reliable advise for scientists, programmers, and students?
+        Can an AI deliver time saving reliable advise ?
     </blockquote>
 </section>
 
