Update button link to new DigitalOcean app

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@ Reviewing and verifying scientific articles by reproducing their results through
 Registering validated code in a curated RAG knowledge base, ensuring transparency and reproducibility.
 Blending expert-reviewed code with domain insights and AI capabilities to deliver precise guidance for coding strategies and genetic analysis.
 
-This enables researchers and data scientists to design experiments, generate hypotheses, and apply probability-driven thinking using trusted, validated resources—augmen
+This enables researchers and data scientists to design experiments, generate hypotheses, and apply probability-driven thinking using validated resources.
+<strong>We are  delivering an Experimental Desing Agent</strong>
+It will leverage on validaded simulation code and also help you get the most value out of your data based on verified statistical code 
+
     </p>
 
     <p>
@@ -67,11 +70,11 @@ This enables researchers and data scientists to design experiments, generate hyp
     <h3>How the System Learns</h3>
 
     <p>
-        spcific prompts can be used to trigger the knowledge base for optimal feedback
+        extesive tested GENAI generated code and our proprietary code base
     </p>
 
     <blockquote>
-        Can an AI deliver time saving reliable advise ?
+        Can an AI deliver reliable time saving advise ?
     </blockquote>
 </section>
 
