Update button link to new DigitalOcean app

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h3>The Project</h3>
 
     <p>
-        <strong>AI Ensemble</strong> brings scientific rigor to AI.
+        <strong>AI Ensemble</strong> brings statistical rigor to AI.
 
 We reproduce and validate scientific articles through clean, transparent code.
 
@@ -34,8 +34,8 @@ This verified code is stored in a curated RAG knowledge base.
 Our AI agents use this foundation to give probabilistic, genetical, and statistical guidance.
         
 
-<strong>Value Proposition</strong>
-<strong>The Experimental Design<strong> Agent helps you:
+<strong>Value Proposition:</strong>
+The AI Ensamble agent helps you:
 – build better experiments
 – explore hypotheses
 – optimize decisions with probability-based thinking
@@ -45,8 +45,8 @@ The Experimental Design Agent tests your ideas through validated simulations and
     </p>
 
     <p>
-        The agent assists user to generate hypotheses 
-        and enable probability thinking using cureted code.
+        The agent assists you to generate hypotheses 
+        and enable probability thinking using curated code.
     </p>
 
     <p>
@@ -58,10 +58,10 @@ The Experimental Design Agent tests your ideas through validated simulations and
 <section>
     <h3>Access the Private Agent</h3>
 
-    <p>The AI Ensemble Ensamble agent can be accessed here  (private access only):</p>
+    <p>The AI Ensamble agent can be accessed here  (private access only):</p>
 
     <a class="button" href="https://statsapp-47vj4.ondigitalocean.app/" target="_blank">
-        Open the Experiment-Design Agent
+        Open the AI Ensamble agent
     </a>
 
     <p>
