Update button link to new DigitalOcean app

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="certified-prompts.html">Certified Prompts</a>
+    <a href="certified-prompts.html">Key article selection</a>
     <a href="about.html">About the Author</a>
 </nav>
 </header>
@@ -72,7 +72,7 @@ The AI Ensamble agent helps you:
     <h3>How the System Learns</h3>
 
     <p>
-        extesive tested GENAI generated code and our proprietary code base
+        Results from Key scientific articles are reproduced by AI and validaded by experts
     </p>
 
     <blockquote>
